[gd_scene format=3 uid="uid://c4o0ct3l818f8"]

[ext_resource type="Script" uid="uid://cwihqic35ovf6" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Theme" uid="uid://djonhi38vjyp" path="res://themes/Seed_Menu.tres" id="1_wu84c"]
[ext_resource type="FontFile" uid="uid://cpaa6s6xumhku" path="res://themes/quaver.ttf" id="3_bqqt6"]
[ext_resource type="Texture2D" uid="uid://d3lvs2tdtbcuy" path="res://assets/Menus/MainMenu/MainMenuBackground.png" id="4_8ln24"]
[ext_resource type="Texture2D" uid="uid://c0i5wfc6dll2a" path="res://assets/Pixel Art Bird 16x16/BirdSliderIcon..png" id="5_oa1go"]
[ext_resource type="Texture2D" uid="uid://cw4r76yh3it1o" path="res://assets/Menus/CarritCorner_Dropdown.png" id="5_tbmy8"]
[ext_resource type="Script" uid="uid://cnt82i3ewybng" path="res://scripts/main_carrot_corner_texture.gd" id="6_lgwnu"]
[ext_resource type="Texture2D" uid="uid://sqcs52qc3ud3" path="res://assets/Menus/singleCoin1.png" id="6_rtw2f"]
[ext_resource type="Texture2D" uid="uid://c3smv6mls2qob" path="res://assets/Menus/Selector_Background.png" id="7_1ajci"]
[ext_resource type="Texture2D" uid="uid://hk1in165mvoe" path="res://assets/Pixel Art Bird 16x16/BirdSliderIcon_Selected.png" id="8_flqon"]
[ext_resource type="Texture2D" uid="uid://dulgtm1g88bc" path="res://assets/Menus/MainMenu/StartButton.png" id="9_jk1qb"]
[ext_resource type="Texture2D" uid="uid://cljpn8ht0g1hv" path="res://assets/Menus/MainMenu/StartButton_highlight.png" id="10_5dd4i"]
[ext_resource type="Texture2D" uid="uid://b5v4iijcn70ya" path="res://assets/Menus/singleCoin1_highlight.png" id="11_rcqid"]
[ext_resource type="PackedScene" uid="uid://by1elj6ufj5uq" path="res://scenes/cursor.tscn" id="14_1ajci"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1ajci"]
texture = ExtResource("7_1ajci")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7b55j"]
texture = ExtResource("7_1ajci")

[node name="MainMenu" type="Control" unique_id=806335344]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_wu84c")
script = ExtResource("1_l6cm7")

[node name="TextureRect" type="TextureRect" parent="." unique_id=1479499702]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_8ln24")
stretch_mode = 6

[node name="VSplitContainer" type="VBoxContainer" parent="." unique_id=934442792]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TitleContainer" type="MarginContainer" parent="VSplitContainer" unique_id=945451133]
layout_mode = 2
size_flags_vertical = 3

[node name="MainCarrotCornerTexture" type="TextureRect" parent="VSplitContainer/TitleContainer" unique_id=1708019987]
layout_mode = 2
texture = ExtResource("5_tbmy8")
stretch_mode = 3
script = ExtResource("6_lgwnu")

[node name="TitleDropDownTimer" type="Timer" parent="VSplitContainer/TitleContainer" unique_id=687047111]
wait_time = 0.5
one_shot = true
autostart = true

[node name="SettingsContainer" type="MarginContainer" parent="VSplitContainer" unique_id=1737301104]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/SettingsContainer" unique_id=1540189913]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VSplitContainer/SettingsContainer/HBoxContainer" unique_id=332756687]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer/SettingsContainer/HBoxContainer/MarginContainer" unique_id=642030017]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="VSplitContainer/SettingsContainer/HBoxContainer/MarginContainer/VBoxContainer" unique_id=2077859937]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_1ajci")

[node name="BirdValueLabel" type="Label" parent="VSplitContainer/SettingsContainer/HBoxContainer/MarginContainer/VBoxContainer/PanelContainer" unique_id=542700428]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource("1_wu84c")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
vertical_alignment = 1

[node name="BirdSlider" type="HSlider" parent="VSplitContainer/SettingsContainer/HBoxContainer/MarginContainer/VBoxContainer" unique_id=1261476537]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/center_grabber = -1
theme_override_constants/grabber_offset = -1
theme_override_constants/tick_offset = 0
theme_override_icons/grabber = ExtResource("5_oa1go")
theme_override_icons/grabber_highlight = ExtResource("8_flqon")
theme_override_icons/grabber_disabled = ExtResource("5_oa1go")
max_value = 3.0
tick_count = 4

[node name="MarginContainer2" type="MarginContainer" parent="VSplitContainer/SettingsContainer/HBoxContainer" unique_id=1685273400]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer2" type="VBoxContainer" parent="VSplitContainer/SettingsContainer/HBoxContainer/MarginContainer2" unique_id=1742902660]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VSplitContainer/SettingsContainer/HBoxContainer/MarginContainer2/VBoxContainer2" unique_id=1948709283]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_7b55j")

[node name="StartingGoldValueLabel" type="Label" parent="VSplitContainer/SettingsContainer/HBoxContainer/MarginContainer2/VBoxContainer2/PanelContainer" unique_id=294737933]
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("1_wu84c")
theme_override_fonts/font = ExtResource("3_bqqt6")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1

[node name="StartingGoldSlider" type="HSlider" parent="VSplitContainer/SettingsContainer/HBoxContainer/MarginContainer2/VBoxContainer2" unique_id=2136165236]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
theme_override_constants/center_grabber = 0
theme_override_constants/tick_offset = 0
theme_override_icons/grabber = ExtResource("6_rtw2f")
theme_override_icons/grabber_highlight = ExtResource("11_rcqid")
min_value = 10.0
max_value = 50.0
step = 10.0
value = 10.0
tick_count = 5

[node name="StartButtonContainer" type="MarginContainer" parent="VSplitContainer" unique_id=101522194]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = -5
theme_override_constants/margin_bottom = 9

[node name="StartGame" type="TextureButton" parent="VSplitContainer/StartButtonContainer" unique_id=198625774]
layout_mode = 2
texture_normal = ExtResource("9_jk1qb")
texture_hover = ExtResource("10_5dd4i")

[node name="Cursor" parent="." unique_id=1445946177 instance=ExtResource("14_1ajci")]

[connection signal="timeout" from="VSplitContainer/TitleContainer/TitleDropDownTimer" to="VSplitContainer/TitleContainer/MainCarrotCornerTexture" method="_on_timer_timeout"]
[connection signal="value_changed" from="VSplitContainer/SettingsContainer/HBoxContainer/MarginContainer/VBoxContainer/BirdSlider" to="." method="_on_bird_slider_value_changed"]
[connection signal="value_changed" from="VSplitContainer/SettingsContainer/HBoxContainer/MarginContainer2/VBoxContainer2/StartingGoldSlider" to="." method="_on_starting_gold_slider_value_changed"]
[connection signal="pressed" from="VSplitContainer/StartButtonContainer/StartGame" to="." method="_on_start_game_pressed"]
